fix():pagenation in fetch order
here fix the pagenation error and produce metadata
